--- a/img/favicons/manifest.json
+++ b/img/favicons/manifest.json
@@ -1,13 +1,13 @@
 {
-	"name": "Gustav Kjellin",
+	"name": "Gustav Kjellin Design",
 	"icons": [
 		{
-			"src": "\/img\/favicons\/android-chrome-192x192.png",
+			"src": "\/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image\/png"
 		},
 		{
-			"src": "\/img\/favicons\/android-chrome-512x512.png",
+			"src": "\/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image\/png"
 		}
